--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.url = jdbc:mysql://localhost:3306/furjoy
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.username = root
-#spring.datasource.password = Mysqlprasad@1
+#spring.datasource.password = prasad
 #
 ### Hibernate Properties
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -24,7 +24,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/furjoy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Mysqlprasad@1
+spring.datasource.password=prasad
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
